--- a/doc/rr-modelling.ipynb
+++ b/doc/rr-modelling.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "### Constraints vs rules\n",
     "\n",
-    "The only difference between constraints and rules is that the former have a higher priority than the latter: if a constraint can be executed then no rule is allowed to be executed, or in other words, a rule can be executed only if no constraint can. A model may have no constraints in which case the corresponding section is completely omitted.\n",
+    "The only difference between constraints and rules is that the former have a higher priority than the latter: if a constraint can be executed then no rule is allowed to be executed, or in other words, a rule can be executed only if no constraint can. A model may have no constraints in which case the corresponding section is completely omitted. Constraints are usually used to model quick or mandatory processes in an ecosystem, typically, when then place where some species live disappear, then the species have to disappear has well (eg, fishes in a pond will die if the pond dries). In our termites example, termitomicies cannot exist without a fungal garden, hence the constraint.\n",
     "\n",
     "## Graphical representations of a `rr` model\n",
     "\n",
@@ -173,7 +173,11 @@
     " * if `s` is a state and `c` is a constraint that can be executed from `s` yielding a new state `s'` distinct from `s`, then there is an edge `s -> s'` labelled by `c` in the state-space\n",
     " * if `s` is a state such that no constraint can be executed from it, and if `r` is a rule that can be executed from `s` yielding a new state `s'` distinct from `s`, then there is an edge `s -> s'` labelled by `r` in the state-space\n",
     "\n",
-    "Note that above we required `s` to be distinct from `s'` and thus we have no edges `s -> s` in a state-space (so called side-loops)."
+    "Note that above we required `s` to be distinct from `s'` and thus we have no edges `s -> s` in a state-space (so called side-loops).\n",
+    "\n",
+    "### Transient states\n",
+    "\n",
+    "A state that enables a constraint is called _transient_, it can be seen as a state that the ecosystem can reach but only for a short period of time. In a state-space analysis, transient states may be kept or removed, depending on what one wants to observe."
    ]
   }
  ],
