--- a/doc/state-space-analysis.ipynb
+++ b/doc/state-space-analysis.ipynb
@@ -26,21 +26,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Object `model` created by `ecco` can be called as a function, in which case it returns a component view object that allows to explore the models' state space (that is, a component graph). This call requires one argument that is a name for the view (which will be used to save its files). Additional arguments may be provided:\n",
-    " * `force=True` (default is `False`) to force recomputing all the data associated with the view\n",
+    "Object `model` created by `ecco` can be called as a function, in which case it returns a component graph object that allows to explore the models' state space. Optional arguments may be provided:\n",
     " * `compact=False` (default is `True`) to keep the transient states and constraints occurrences in the state space\n",
-    " \n",
-    "On the first call (or when `force=True`), quite a lot of computation is performed and may take some time:\n",
-    " * the `rr` model is compiled to an optimised library for faster execution \n",
-    " * the symbolic state space is fully computed\n",
-    " * a basic decomposition is performed extracting various pairwise-disjoint components (each of which may be empty):\n",
-    "   * _hull_ contains all the SCC and the states connecting them\n",
-    "   * _head_ contains all the states leading to _hull_\n",
-    "   * _tail_ contains all the states that are reachable from _hull_\n",
-    "   * _skip_ contains all the states that connect _head_ to _tail_ without going through _hull_\n",
-    "   * _rest_ contains all the other states (for instance, deadlocks reachable from _head_ or _skip_ but not from _hull_)\n",
-    " * these sets of states are called _components_ and form a _component graphs_ that is saved to the disk into CSV files\n",
-    " * the content of these tables is available as `.nodes` and `.edges` attributes of the view"
+    " * `init` specifies an initial states of the LTS. If not provided, take them from the model. Otherwise, it must be a string containing a comma-separated sequence of states assignements, that is interpreted as successive assignements starting from the initial states specified in the model. Each assignement be either:\n",
+    "   - `*`: take all the potential states (so called universe)\n",
+    "   - `+`: set all variables to `+`\n",
+    "   - `-`: set all variables to `-`\n",
+    "   - `VARx`, where `VAR` is a variable name and `x` is a sign in `+`, `-`, or `*`: set variable as specified by the sign\n",
+    "   \n",
+    "   For instance, `init=\"*,Ac+,Wk-` selects all the potential states restricted to those where `Ac` is `+` and `Wk` is `-`. A list of such strings may be used, in which case the union of the\n",
+    "   corresponding sets of states is considered.\n",
+    " - `split` (default is `True`): should the graph be initially split into its initial states, SCC hull, and deadlocks+basins"
    ]
   },
   {
@@ -58,35 +54,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='<b>compiling</b>'), HTML(value='termites.rr')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='builing transition relations'), IntProgress(value=0, bar_style='info', max=3), HTML…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45288c776d764e53ba82f2fd1da253ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='<b>loading</b>'), IntProgress(value=0, bar_style='info', max=2), HTML(value='termit…"
+       "HBox(children=(HTML(value='<b>saving</b>'), HTML(value='termites/termites.gal')))"
       ]
      },
      "metadata": {},
@@ -94,14 +62,14 @@
     }
    ],
    "source": [
-    "v = model(\"tuto\", compact=False)"
+    "g = model(compact=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A view may be drawn, yielding an interactive graph with additional information:\n",
+    "A component graph may be drawn, yielding an interactive graph with additional information:\n",
     " * default nodes shapes are:\n",
     "   * circles for SCC\n",
     "   * squares for components that contain deadlocks\n",
@@ -111,7 +79,7 @@
     "   * a triangle for nodes that contain an initial states\n",
     " * default color reflects the components size (green for the smaller ones and red for the larger ones)\n",
     "   \n",
-    "Remember to use `v.draw?` to see the method documentation."
+    "Remember to use `g.draw?` to see the method documentation."
    ]
   },
   {
@@ -124,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4d70f86d9a84742bdf40965e87d8e11",
+       "model_id": "2eb6800eb56e41e787a0e5207a113fce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,18 +105,18 @@
     }
    ],
    "source": [
-    "v.draw(fig_height=300)"
+    "g.draw(fig_height=300)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Information about the components (node) and the edges between them is available by selecting nodes in the graph, or directly through the tables `v.nodes` and `v.edges`.\n",
+    "Information about the components (node) and the edges between them is available by selecting nodes in the graph, or directly through the tables `g.nodes` and `g.edges`.\n",
     "\n",
     "## Statistical information about components\n",
     "\n",
-    "Method `v.count` allows to count for each component and each variable how many states have this variable on. If no argument is provided to `v.count`, it computes this for every component, otherwise, it expects the list of components for which the information has to be computed:"
+    "Method `g.count` allows to count for each component and each variable how many states have this variable on. If no argument is provided to `g.count`, it computes this for every component, otherwise, it expects the list of components for which the information has to be computed:"
    ]
   },
   {
@@ -189,37 +157,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>14</td>\n",
+       "      <td>2</td>\n",
        "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,9 +195,9 @@
       ],
       "text/plain": [
        "   Ac  Ec  Fg  Rp  Sd  Te  Wd  Wk\n",
-       "0  10  10   8  10   4   4   2   7\n",
-       "1   1   0   0   1   0   0   0   0\n",
-       "2  14   7   6   0   0   8   6   0"
+       "1   0   0   0   0   0   1   0   1\n",
+       "2   2   7   4   4   8  10  10  10\n",
+       "3   6   0   0   8   6   0   7  14"
       ]
      },
      "execution_count": 4,
@@ -238,19 +206,19 @@
     }
    ],
    "source": [
-    "v.count()"
+    "g.count()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This returns a `pandas.DataFrame` whose columns are the variables and whose index (the left-most column withot title) are the components numbers. It is possible to compute a PCA on this table using `v.pca()`. Note also that PCA is one of the layout engines proposed for the graphs of views: it sets the position of nodes according to the result of `v.pca`, considering the first factor as the `x` position and the second factor as the `y` position."
+    "This returns a `pandas.DataFrame` whose columns are the variables and whose index (the left-most column withot title) are the components numbers. It is possible to compute a PCA on this table using `g.pca()`. Note also that PCA is one of the layout engines proposed for the graphs of views: it sets the position of nodes according to the result of `g.pca`, considering the first factor as the `x` position and the second factor as the `y` position."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,17 +248,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>-2.326425</td>\n",
-       "      <td>-1.663681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2.993072</td>\n",
        "      <td>-0.754523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.326425</td>\n",
+       "      <td>-1.663681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>-0.666646</td>\n",
        "      <td>2.418204</td>\n",
        "    </tr>\n",
@@ -300,18 +268,18 @@
       ],
       "text/plain": [
        "          0         1\n",
-       "0 -2.326425 -1.663681\n",
        "1  2.993072 -0.754523\n",
-       "2 -0.666646  2.418204"
+       "2 -2.326425 -1.663681\n",
+       "3 -0.666646  2.418204"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v.pca()"
+    "g.pca()"
    ]
   },
   {
@@ -320,56 +288,18 @@
    "source": [
     "## Splitting components\n",
     "\n",
-    "A component may be split in two according to the valuation of its states variables. For instance below, we split component `2` by telling apart those states in which `Sd` in on from those in which `Sd` is off. The former will become the new component `2` while the latter will go to a new component (that will be numbered `3`)."
+    "Components may be split in two according to some properties. In it's simplest form, a property is a variable. For instance below, we split the components of `g` by telling apart those states in which `Sd` in on from those in which `Sd` is off. This yields a new component graphs that we can draw in turn."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df7e0f507abf4b28a3e24d7016bac635",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='splitting'), IntProgress(value=0, bar_style='info', max=4), HTML(value='compiling e…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c89967cabfd4460b9fd66df055abb19",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='<p style=\"line-height:140%\"><span style=\"color:#000088; font-weight:bold;\">info</span> detected CT…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "v.split(0, \"Sd\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1313e5ea7407462585cbbea8ad3ff272",
+       "model_id": "723e1c07a7cd4f33985373d67b553d6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,16 +312,17 @@
     }
    ],
    "source": [
-    "v.draw()"
+    "g2 = g.split(\"Sd\")\n",
+    "g2.draw(fig_height=300)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When called with no split criterion as second argument, `split` will perform a basic decomposition of the component, just like the state space was initially decomposed (into hull, head, tail, skip, and rest). Moreover, if the split criterion is provided and `normalise=True` also, every component resulting from the split will be further examined for such a basic decomposition.\n",
+    "From the components' numbers we known that only component `2` has been split into `4` and `5`. Indeed, the component numbers stay consistent among the various graphs one may build and if two components have the same number, we can be sure that hold exactly the same states.\n",
     "\n",
-    "In general, the split criterion may be an expression using one of the following syntaxes:\n",
+    "In general, the split formula may be an expression using one of the following syntaxes:\n",
     " * CTL formulas\n",
     " * ARCTL formulas\n",
     " * states formulas\n",
@@ -471,38 +402,12 @@
     "\n",
     "## Merging components\n",
     "\n",
-    "Components may be also merged using method `merge` whose arguments are the components numbers to be merged. The resulting component will replace the first provided, inheriting its number. So below, `0` and `4` are merged into component `0`."
+    "Components may be also merged using method `merge` whose arguments are the components numbers to be merged."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95a964ddb1124930911e63941c9f2cee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='merging'), IntProgress(value=0, bar_style='info', max=2), HTML(value='merging compo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "v.merge(1,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -510,7 +415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3092179caeac4f85bed28aef9467d190",
+       "model_id": "653dc333f65444f0a155bfe2d248b8f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,18 +428,51 @@
     }
    ],
    "source": [
-    "v.draw(fig_height=300)"
+    "g3 = g2.merge(1,3)\n",
+    "g3.draw(fig_height=300)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Workflow\n",
+    "## To be continued\n",
     "\n",
-    "Using splits and merges is the basic way of progressively decomposing a state-space into a graph that makes sense and exhibits interesting properties. Another useful feature is the ability to drop a component: `v.drop(0)` completely remove component `0`, `v.drop(1,3)` removes components `1` and `3`, etc.\n",
+    "Soon here: more information about split, merge, using formulas, tags, and aliases..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explicit analysis\n",
     "\n",
-    "Another useful method is `v.save()` that saves the current state of a component graph into a pair of CSV files (one for the nodes and one for the edges)."
+    "A component graph in `ecco` may completely or partially explicited, ie, all or just some of its components may be split into their individual states. For example below, we explicit component `5` in `g2`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc4ca4ebd57f4d6da7f275e45e7f620e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('PCA', 'dot', 'neato', 'fdp', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = g2.explicit(5)\n",
+    "x.draw()"
    ]
   },
   {
