--- a/doc/state-space-analysis.ipynb
+++ b/doc/state-space-analysis.ipynb
@@ -385,12 +385,28 @@
     " * the atoms are\n",
     "   * a variable name as `Wk` which means that we want all the states in which `Wk` is on\n",
     "   * a rule name as `R3` (or a constraint name as `C1`) which means that we want all the states in which the rule is enabled (ie, may be executed)\n",
+    "   * `DEAD` is the set of deadlocks\n",
+    "   * `INIT` is the set of initial states\n",
+    "   * `HULL` is the SCC hull\n",
+    "   * `TRANSIENT` is the set of transient states (i.e. those that enable a constraint)\n",
+    "   * `ALL` is the set of all reachable states\n",
     " * the operations are\n",
     "   * `~expr` (NOT) which mean that we want all the states that are not represented by `expr`\n",
     "   * `left | right` (OR) which means that we want all the states that are in `left`, `right`, or both\n",
     "   * `left & right` (AND) which means that we want all the states that are both in `left` and `right`\n",
     "   * `left ^ right` (XOR) which means that we want all the states that are either in `left` or `right` but not in both\n",
     "   * `(expr)` to group sub-expressions and enforce operators priorities\n",
+    " * some builtin functions may be applied to sets of states expressions:\n",
+    "   * `succ_R0(expr)` (resp. `pred_R0(expr)`) returns the successor (resp. predecessor) states of `expr` through rules `R0`, one such function exists for each rule or constraint\n",
+    "   * `hull(expr)` returns the convex hull of `expr`\n",
+    "   * `comp(expr)` returns the complement set of `expr`\n",
+    "   * `succ(expr)` returns the successors states of `expr`\n",
+    "   * `succ_s` is the least fixed point of `succ`\n",
+    "   * `succ_o` is the greatest fixed point of `succ`\n",
+    "   * `pred`, `pred_s`, and `pred_o` are similarly defined\n",
+    "   * `entries(expr)` is the set of states from `expr` that can be reached from its outside in one transition\n",
+    "   * `exit(expr)` is the set of states from `expr` that allow to leave it in one transition\n",
+    "   * `oneway(trans, expr)` is the set of states that can be reached by first firing `trans` (a rule or constraint name) and then arbitrary transitions; if `expr` is ommitted `ALL` is considered; an error is rased if `trans` is not a one-way action\n",
     "   \n",
     "#### Examples\n",
     "\n",
