--- a/doc/rr-modelling.ipynb
+++ b/doc/rr-modelling.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d513b1cafc7b40cbb931cec937d89ab8",
+       "model_id": "861907cfbb8044bf9a77f660931639e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,21 +87,12 @@
     "Method `ecograph` displays the _ecosystemic graph_ (that is, an influence graph whose nodes are the variables and whose edges represent the influence of one node onto another). Try to type `model.ecograph?` to discover the many available options.\n",
     "\n",
     "Graphs are interactive:\n",
-    " * moving the mouse pointer over a node highlights its arcs\n",
-    " * clicking on nodes selects them and displays their attached information in the tabs below the graph\n",
-    " * clicking on the background unselects all nodes\n",
-    " * various dropdown menus allow to change visual attributes:\n",
-    "   * Layout: select a layout engine to compute the nodes' positions\n",
-    "   * Labels: select which column (from the table displayed upon nodes selection) is used to print nodes labels\n",
-    "   * Color: select which column is used to select the color of node\n",
-    "   * Shape: select which column is used to chose a shape for nodes\n",
-    "   * Palette: select the colour palette from which nodes colors are picked\n",
-    "   * Size: select the nodes size\n",
-    " * below the graph, a tool bar allow to\n",
-    "   * pan/zoom the graph: click the left button and then pan the graph by dragging it, or zoom with the mouse wheel; click again this button to disable pan/zoom\n",
-    "   * reset pan/zoom to the original values\n",
-    "   * save graph as a PNG image\n",
-    " * below the tool bar, two tabs display the selected nodes/edges information as explained above; a third tab allows to move the selected nodes using sliders"
+    " * clicking on nodes selects them and displays their attached information in the _Inspector_ tab below the graph\n",
+    " * various tabs with controls allow to change visual attributes\n",
+    "   * _Graph_ for the graph layout\n",
+    "   * _Nodes_ for the appearance of nodes (colors, shapes, etc.)\n",
+    "   * _Edges_ for the appearance of edges (colors, tips, etc.)\n",
+    " * _Export_ tab allow to get the graph as PDF, LaTeX, etc., file. This feature is so far exerimental and requires the user to help capturing the nodes positions by moving the mouse over them."
    ]
   },
   {
@@ -112,12 +103,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1350f651fccd46aeb6d0eb6f78556e2b",
+       "model_id": "1a84d71891734e67adf2c7fc71c1c65f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=4, options=('dot', 'neato', 'fdp', 'twopi',…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=1, optio…"
       ]
      },
      "metadata": {},
@@ -132,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Method `model.ecohyper` displays the _ecosystemic hypergraph_ that is another graphical representation of the `rr` model. This is a more precise representation that actually loses only the description of the variables and their dispatching into sections (these informations are actually only for the modeller but carry no semantical meaning). In this representation, round-shaped nodes are the variables, and square-shaped nodes are the rules and constraints (the latter being displayed with a yellow background). An edge links a rule/constraint with each variables that is used in it, a white (resp. black) dot represents a sign `-` (resp. `+`), and the left-hand side of the rule corresponds to the rule-side of the edge, while the right-hand side corresponds to the variable-side of the edge. See for instance how rule R9, that is `Ac+, Sd- >> Wk-, Rp-` is rendered."
+    "Method `model.ecohyper` displays the _ecosystemic hypergraph_ that is another graphical representation of the `rr` model. This is a more precise representation that actually loses only the description of the variables and their dispatching into sections (these informations are actually only for the modeller but carry no semantical meaning). In this representation, round-shaped nodes are the variables, and square-shaped nodes are the rules and constraints (the latter being displayed with a yellow background). An edge links a rule/constraint with each variables that is used in it, a white (resp. black) dot represents a sign `-` (resp. `+`), and the left-hand side of the rule corresponds to the rule-side of the edge, while the right-hand side corresponds to the variable-side of the edge. See for instance how rule R9, that is `Ac+, Sd- >> Wk-, Rp-`, is rendered."
    ]
   },
   {
@@ -143,12 +134,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca8975b0fcde487b9c818a44c1a09bd1",
+       "model_id": "d60368c2739a4811a31ff308cca8a111",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('dot', 'neato', 'fdp', 'twopi',…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=1, optio…"
       ]
      },
      "metadata": {},
@@ -175,15 +166,24 @@
     "\n",
     "Note that above we required `s` to be distinct from `s'` and thus we have no edges `s -> s` in a state-space (so called side-loops).\n",
     "\n",
+    "The semantics is fully detailled in [DOI:10.1007/978-3-031-06653-5_10](https://doi.org/10.1007/978-3-031-06653-5_10).\n",
+    "\n",
     "### Transient states\n",
     "\n",
     "A state that enables a constraint is called _transient_, it can be seen as a state that the ecosystem can reach but only for a short period of time. In a state-space analysis, transient states may be kept or removed, depending on what one wants to observe."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
