--- a/doc/state-space-analysis.ipynb
+++ b/doc/state-space-analysis.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "g = model(compact=False)"
+    "g = model()"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -92,12 +92,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eb6800eb56e41e787a0e5207a113fce",
+       "model_id": "465557cb0c2f48ffb4d6303d0a837c8f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('PCA', 'dot', 'neato', 'fdp', '…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=3, optio…"
       ]
      },
      "metadata": {},
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "g.draw(fig_height=300)"
+    "g.draw()"
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "3   6   0   0   8   6   0   7  14"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "3 -0.666646  2.418204"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,18 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "723e1c07a7cd4f33985373d67b553d6a",
+       "model_id": "b6fce1f8ab2c47e790ffe94f9455d797",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('PCA', 'dot', 'neato', 'fdp', '…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=3, optio…"
       ]
      },
      "metadata": {},
@@ -313,7 +313,7 @@
    ],
    "source": [
     "g2 = g.split(\"Sd\")\n",
-    "g2.draw(fig_height=300)"
+    "g2.draw()"
    ]
   },
   {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -431,12 +431,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "653dc333f65444f0a155bfe2d248b8f5",
+       "model_id": "bb864efa75ff42a58c06db84e5e64710",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('PCA', 'dot', 'neato', 'fdp', '…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=3, optio…"
       ]
      },
      "metadata": {},
@@ -445,7 +445,7 @@
    ],
    "source": [
     "g3 = g2.merge(1,3)\n",
-    "g3.draw(fig_height=300)"
+    "g3.draw()"
    ]
   },
   {
@@ -468,18 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc4ca4ebd57f4d6da7f275e45e7f620e",
+       "model_id": "eafb8e4cdc2b4fe3a692d22326390dde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Layout', index=2, options=('PCA', 'dot', 'neato', 'fdp', '…"
+       "VBox(children=(Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='layout', index=3, optio…"
       ]
      },
      "metadata": {},
@@ -501,7 +501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
