--- a/doc/static-analysis.ipynb
+++ b/doc/static-analysis.ipynb
@@ -181,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "632cc7efef1d4e579e2c15a5a9b51149",
+       "model_id": "82756d88f3074d41b17f1970ef7c4a7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39ef523fbba34456b667b16a14f5f914",
+       "model_id": "43192de9af9a46d8baaa2789f5800387",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bffda6e99b3a41c6b482be03cf1cf575",
+       "model_id": "b7915f63f4ba4ce199255a91037e7391",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0eadcac7d7564872b8bc0d908ca171e1",
+       "model_id": "7a3971c258d84a1a824bcaef70cec4f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
